--- a/public_html/css/custom/popup.css
+++ b/public_html/css/custom/popup.css
@@ -19,7 +19,7 @@
     padding: 2%;
     border-radius: 15px;
     box-shadow: 0 0 5px #CCC;
-    background: #FFF;
+    background: #CCC;
     position: relative;
     transition: all 5s ease-in-out;
     margin: 20% auto;    
